# Multi-Source-Candidate-Data-Transformer

./: README.md  main.py  pyproject.toml  requirements.txt
configs/: custom_projection.json  default.json
outputs/: custom_output.json  default_output.json  live_github_output.json
samples/: candidates.csv  github_profiles.json  identity_map.json
tests/: test_github_api.py  test_identity.py  test_merger.py  test_normalizer.py  test_pipeline.py  test_projector.py
transformer/: cli.py  github_api.py  identity.py  merger.py  normalizer.py  pipeline.py  projector.py  validator.py
transformer/models/: canonical.py  config.py  raw.py
transformer/parsers/: base.py  csv_parser.py  github_parser.py
